# Intelligent-Support-Orchestrator-with-RAG-Async-Processing

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/api/: routes.py
app/core/: config.py
app/services/: ingestion.py
app/worker/: __init__.py  tasks.py
data/knowledge_base/: shipping_policy.md
docker/: Dockerfile.api
tests/: test_rag_logic.py
