[tool.poetry]
name = "intelligent-support-orchestrator"
version = "0.1.0"
description = "AI-powered support automation with RAG and Celery"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
celery = {extras = ["redis"], version = "^5.3.6"}
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-qdrant = "^0.0.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
